# graphos

./: .gitignore  CLAUDE.md  requirements.txt  setup_npu.py
actions/: __init__.py  base.py  counter.py  log_action.py  pcap_writer.py
capture/: __init__.py  __main__.py  cli.py  nodes.py  pipeline.py  source.py
core/: constants.py  tensor_layout.py
dataflow/: __init__.py  __main__.py  demo.py  graph.py  node.py  pipeline.py  primitives.py  scheduler.py
dataflow/nodes/: __init__.py  adapter.py  batch.py  infer.py  router.py  sink.py  source.py  tee.py  tensor.py
graphos-cpp/: .gitignore  CMakeLists.txt
graphos-cpp/bench/: CMakeLists.txt  bench_channel.cpp
graphos-cpp/include/graphos/actions/: action.hpp  counter.hpp  log_action.hpp  pcap_writer.hpp
graphos-cpp/include/graphos/capture/: dpdk_source.hpp  pcap_source.hpp  source.hpp
graphos-cpp/include/graphos/core/: constants.hpp  decision.hpp  latency_histogram.hpp  types.hpp
graphos-cpp/include/graphos/dataflow/: channel.hpp  graph.hpp  node.hpp  port.hpp  scheduler.hpp
graphos-cpp/include/graphos/gpnpu/: pipeline.hpp
graphos-cpp/include/graphos/kernel/: compose.hpp  health.hpp  loop.hpp  program.hpp  runtime.hpp
graphos-cpp/include/graphos/nodes/: action_dispatcher.hpp  adapter_node.hpp  batch_node.hpp  decision_joiner.hpp  fast_path_classifier.hpp  hard_batcher.hpp  infer_node.hpp  npu_executor_async.hpp  router_sink.hpp  sink_node.hpp  source_node.hpp  tee_node.hpp  tensor_node.hpp
graphos-cpp/include/graphos/shell/: repl.hpp
graphos-cpp/src/: main.cpp
graphos-cpp/src/actions/: counter.cpp  log_action.cpp  pcap_writer.cpp
graphos-cpp/src/capture/: dpdk_source.cpp  pcap_source.cpp
graphos-cpp/src/core/: types.cpp
graphos-cpp/src/dataflow/: graph.cpp  scheduler.cpp
graphos-cpp/src/gpnpu/: pipeline.cpp
graphos-cpp/src/kernel/: compose.cpp  health.cpp  loop.cpp  program.cpp  runtime.cpp
graphos-cpp/src/nodes/: action_dispatcher.cpp  adapter_node.cpp  batch_node.cpp  decision_joiner.cpp  fast_path_classifier.cpp  hard_batcher.cpp  infer_node.cpp  npu_executor_async.cpp  router_sink.cpp  sink_node.cpp  tee_node.cpp  tensor_node.cpp
graphos-cpp/src/shell/: repl.cpp
graphos-cpp/tests/: CMakeLists.txt  test_action_dispatcher.cpp  test_actions.cpp  test_capture.cpp  test_channel.cpp  test_compose.cpp  test_constants.cpp  test_decision_joiner.cpp  test_dpdk_capture.cpp  test_fast_path.cpp  test_gpnpu_pipeline.cpp  test_graph.cpp  test_hard_batcher.cpp  test_latency_histogram.cpp  test_nodes.cpp  test_npu_executor_async.cpp  test_program.cpp  test_real_capture.cpp  test_repl.cpp  test_runtime.cpp  test_scheduler.cpp
graphos-cpp/tests/fixtures/: real_traffic.pcap  test.pcap
kernel/: __init__.py  __main__.py  compose.py  health.py  loop.py  program.py  repl.py  runtime.py
kernel/programs/: __init__.py  classifier.py  composed_router.py  export_composed.py  export_route_table.py  route_table.py
models/: router_graph.pth  router_graph_b64.onnx
paper/: graphos_paper.tex
router/: dataset.py  export_onnx.py  model.py  train.py
runtime/: benchmark.py  cpu_baseline.py  npu_engine.py  packet_batcher.py
tests/: test_batch_inference.py  test_benchmark.py  test_capture.py  test_compose.py  test_composed_router.py  test_dataflow.py  test_kernel.py  test_kernel_loop.py  test_model.py  test_repl.py  test_route_table.py  test_routing.py  test_tensor_layout.py
